--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -92,6 +92,19 @@ jobs:
         run: echo "superbuild=-DSUPERBUILD=OFF" >> $GITHUB_ENV && echo "cmake_prefix_path=-DCMAKE_PREFIX_PATH=$(pwd)/build/release/third_party/install" >> $GITHUB_ENV
       - name: configure
         run: cmake $superbuild $cmake_prefix_path -DCMAKE_BUILD_TYPE=RelWithDebInfo -DBUILD_MAVSDK_SERVER=ON -DWERROR=OFF -DENABLE_CPPTRACE=On -DCMAKE_INSTALL_PREFIX=install -Bbuild/release -H.
+      - name: cleanup to save space
+        run: |
+          rm -rf ./build/release/third_party/absl
+          rm -rf ./build/release/third_party/cares
+          rm -rf ./build/release/third_party/curl
+          rm -rf ./build/release/third_party/grpc
+          rm -rf ./build/release/third_party/jsoncpp
+          rm -rf ./build/release/third_party/mavlink
+          rm -rf ./build/release/third_party/openssl
+          rm -rf ./build/release/third_party/protobuf
+          rm -rf ./build/release/third_party/re2
+          rm -rf ./build/release/third_party/tinyxml2
+          rm -rf ./build/release/third_party/zlib
       - name: build
         run: cmake --build build/release -j2
       - name: install
