--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -13,6 +13,7 @@ add_subdirectory(calibrate)
 add_subdirectory(camera)
 add_subdirectory(camera_server)
 add_subdirectory(camera_settings)
+add_subdirectory(camera_zoom)
 add_subdirectory(fly_mission)
 add_subdirectory(fly_multiple_drones)
 add_subdirectory(fly_qgc_mission)
