--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -405,20 +405,31 @@ jobs:
 
   macOS:
     name: ${{ matrix.name }}
-    runs-on: macos-12
+    runs-on: ${{ matrix.runner }}
     strategy:
       matrix:
         include:
-          - name: macOS
+          - name: macOS x64
             build-framework: OFF
-          - name: macOS-framework
+            runner: macos-13
+            architecture: 'x64'
+          - name: macOS arm64
+            build-framework: OFF
+            runner: macos-14
+            architecture: 'arm64'
+          - name: macOS framework x64
             build-framework: ON
+            runner: macos-13
+            architecture: 'x64'
+          - name: macOS framework arm64
+            build-framework: ON
+            runner: macos-14
+            architecture: 'arm64'
     steps:
       - name: Install Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-          architecture: 'x64'
       - uses: actions/checkout@v4
         with:
           submodules: recursive
@@ -427,7 +438,7 @@ jobs:
         id: cache
         with:
           path: ./build/macos/third_party/install
-          key: ${{ github.job }}-${{ matrix.name }}-${{ hashFiles('./third_party/**') }}
+          key: ${{ github.job }}-${{ matrix.name }}-${{ hashFiles('./third_party/**') }}-1
       - name: disable superbuild on cache hit
         if: steps.cache.outputs.cache-hit == 'true'
         run: echo "superbuild=-DSUPERBUILD=OFF" >> $GITHUB_ENV && echo "cmake_prefix_path=-DCMAKE_PREFIX_PATH=$(pwd)/build/macos/third_party/install" >> $GITHUB_ENV
@@ -447,31 +458,44 @@ jobs:
         if: ${{ matrix.build-framework == 'ON' }}
         uses: actions/upload-artifact@v4
         with:
-          name: mavsdk_server_macos.framework
+          name: mavsdk_server_macos_${{ matrix.architecture }}.framework
           path: ./build/macos/src/mavsdk_server/src/mavsdk_server.framework
+          retention-days: 2
+      - name: Upload binary as artefact
+        if: ${{ matrix.build-framework == 'OFF' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: mavsdk_server_macos_${{ matrix.architecture }}
+          path: build/macos/install/bin/mavsdk_server
           retention-days: 2
       - name: Publish mavsdk_server_macos to github release
         if: ${{ startsWith(github.ref, 'refs/tags/v') && matrix.build-framework == 'OFF' }}
         uses: svenstaro/upload-release-action@v1-release
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: 'build/macos/install/bin/mavsdk_server'
-          asset_name: 'mavsdk_server_macos'
+          file: build/macos/install/bin/mavsdk_server
+          asset_name: mavsdk_server_macos_${{ matrix.architecture }}
           tag: ${{ github.ref }}
           overwrite: true
 
   iOS:
     name: ${{ matrix.name }}
-    runs-on: macos-12
+    runs-on: ${{ matrix.runner }}
     strategy:
       matrix:
         include:
           - name: ios
             platform: OS64
             sdk: iphoneos
-          - name: ios_simulator
+            runner: macos-14
+          - name: ios_simulator_x64
             platform: SIMULATOR64
             sdk: iphonesimulator
+            runner: macos-13
+          - name: ios_simulator_arm64
+            platform: SIMULATORARM64
+            sdk: iphonesimulator
+            runner: macos-14
     steps:
       - name: Install Python
         uses: actions/setup-python@v4
@@ -486,7 +510,7 @@ jobs:
         id: cache
         with:
           path: ./build/${{ matrix.name }}/third_party/install
-          key: ${{ github.job }}-${{ matrix.name }}-${{ hashFiles('./third_party/**', './tools/ios.toolchain.cmake') }}
+          key: ${{ github.job }}-${{ matrix.name }}-${{ hashFiles('./third_party/**', './tools/ios.toolchain.cmake') }}-1
       - name: disable superbuild on cache hit
         if: steps.cache.outputs.cache-hit == 'true'
         run: echo "superbuild=-DSUPERBUILD=OFF" >> $GITHUB_ENV && echo "cmake_prefix_path=-DCMAKE_PREFIX_PATH=$(pwd)/build/${{ matrix.name }}/third_party/install" >> $GITHUB_ENV
@@ -501,7 +525,7 @@ jobs:
       - name: configure
         run: cmake $superbuild $cmake_prefix_path -DENABLE_STRICT_TRY_COMPILE=ON -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCMAKE_TOOLCHAIN_FILE=$(pwd)/tools/ios.toolchain.cmake -DENABLE_BITCODE=Off -DPLATFORM=${{ matrix.platform }} -DDEPLOYMENT_TARGET=14.0 -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DWERROR=ON -Bbuild/${{ matrix.name }} -H.
       - name: build
-        run: cmake --build build/${{ matrix.name }} -j2
+        run: cmake --build build/${{ matrix.name }} -j$(nproc)
       - uses: actions/upload-artifact@v4
         with:
           name: mavsdk_server_${{ matrix.name }}.framework
@@ -511,7 +535,7 @@ jobs:
   iOS-XCFramework:
     name: iOS XCFramework
     needs: [macOS, iOS]
-    runs-on: macos-12
+    runs-on: macos-13
     steps:
       - uses: actions/checkout@v4
         with:
@@ -522,12 +546,22 @@ jobs:
           path: ./build/ios/src/mavsdk_server/src/mavsdk_server.framework
       - uses: actions/download-artifact@v4
         with:
-          name: mavsdk_server_ios_simulator.framework
-          path: ./build/ios_simulator/src/mavsdk_server/src/mavsdk_server.framework
+          name: mavsdk_server_ios_simulator_x64.framework
+          path: ./build/ios_simulator_x64/src/mavsdk_server/src/mavsdk_server.framework
       - uses: actions/download-artifact@v4
         with:
-          name: mavsdk_server_macos.framework
-          path: ./build/macos/src/mavsdk_server/src/mavsdk_server.framework
+          name: mavsdk_server_ios_simulator_arm64.framework
+          path: ./build/ios_simulator_arm64/src/mavsdk_server/src/mavsdk_server.framework
+      - uses: actions/download-artifact@v4
+        with:
+          name: mavsdk_server_macos_x64.framework
+          path: ./build/macos_x64/src/mavsdk_server/src/mavsdk_server.framework
+      - uses: actions/download-artifact@v4
+        with:
+          name: mavsdk_server_macos_arm64.framework
+          path: ./build/macos_arm64/src/mavsdk_server/src/mavsdk_server.framework
+      - name: Install tree
+        run: brew install tree
       - name: Package
         run: bash ./src/mavsdk_server/tools/package_mavsdk_server_framework.bash
       - uses: actions/upload-artifact@v4
