--- a/src/integration_tests/CMakeLists.txt
+++ b/src/integration_tests/CMakeLists.txt
@@ -63,11 +63,8 @@ target_compile_definitions(integration_tests_runner
     PRIVATE
     "-DTESTING")
 
-set_target_properties(integration_tests_runner
-    PROPERTIES COMPILE_FLAGS ${warnings}
-)
-
-find_package(GTest)
+hunter_add_package(gtest)
+find_package(GTest REQUIRED)
 
 target_link_libraries(integration_tests_runner
     PRIVATE
