--- a/src/system_tests/CMakeLists.txt
+++ b/src/system_tests/CMakeLists.txt
@@ -26,7 +26,8 @@ target_include_directories(system_tests_runner
     ${PROJECT_SOURCE_DIR}/mavsdk/core
 )
 
-find_package(GTest)
+hunter_add_package(gtest)
+find_package(GTest REQUIRED)
 
 target_link_libraries(system_tests_runner
     PRIVATE
