mavsdk_server: fix warning in gRPC with GCC 13
Signed-off-by: Julian Oes <julian@oes.ch>

--- a/src/mavsdk_server/src/CMakeLists.txt
+++ b/src/mavsdk_server/src/CMakeLists.txt
@@ -52,7 +52,7 @@ foreach(plugin ${COMPONENTS_LIST})
 endforeach()
 
 set_target_properties(mavsdk_server
-    PROPERTIES COMPILE_FLAGS ${warnings}
+    PROPERTIES COMPILE_FLAGS "${warnings} -Wno-null-dereference"
     VERSION ${MAVSDK_VERSION_STRING}
     SOVERSION ${MAVSDK_SOVERSION_STRING}
     )
