--- a/examples/system_info/CMakeLists.txt
+++ b/examples/system_info/CMakeLists.txt
@@ -18,5 +18,5 @@ target_link_libraries(system_info
 if(NOT MSVC)
     add_compile_options(system_info PRIVATE -Wall -Wextra)
 else()
-    add_compile_options(system_info PRIVATE -WX -W2)
+    add_compile_options(system_info PRIVATE -W2)
 endif()
