CI: fix pymavlink on Alpine
pymavlink now wants to use fastcrc which needs to be built with Rust
because fastcrc doesn't supply a musl binary build on PyPi.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -283,7 +283,7 @@ jobs:
     container: alpine:3.19.0
     steps:
       - name: install tools
-        run: apk update && apk add build-base cmake git linux-headers perl tar python3 py3-pip
+        run: apk update && apk add build-base cmake git linux-headers perl tar python3 py3-pip rust cargo
       - uses: actions/checkout@v4
         with:
           submodules: recursive
