--- a/src/mavsdk/core/CMakeLists.txt
+++ b/src/mavsdk/core/CMakeLists.txt
@@ -52,6 +52,7 @@ target_sources(mavsdk
     server_component.cpp
     server_component_impl.cpp
     server_plugin_impl_base.cpp
+    socket_holder.cpp
     tcp_client_connection.cpp
     tcp_server_connection.cpp
     timeout_handler.cpp
